// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostActiveServicesWidget should be able to switch to different type 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card card"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
      >
        Widget Title
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--intent-primary"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            all
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.prod
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.nonProd
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-large"
      >
        <div
          class="typeContainer"
          data-test="mostActiveServicesWidgetType"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            deploymentsText
          </p>
        </div>
        <div
          class="typeContainer typeSelected"
          data-test="mostActiveServicesWidgetTypeSelected"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-white"
          >
            errors
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main stackTickerContainer StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-flex-start"
        data-test="mostActiveServicesWidgetContent"
        style="height: 150px;"
      >
        <div
          class="weightedStackContainer"
        >
          <div
            class="StyledProps--font StyledProps--main WeightedStack--main"
          >
            <div>
              <div
                class="WeightedStack--stack stack"
              >
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 100%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label StyledProps--padding-left-small StyledProps--padding-right-small"
                      >
                        Service2
                         (
                        163
                        )
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="WeightedStack--stack stack"
              >
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 38.65030674846626%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label StyledProps--padding-left-small StyledProps--padding-right-small"
                      >
                        Service1
                         (
                        63
                        )
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tickerContainer"
          >
            <div
              class="tickerContainer"
              data-test="ticker"
            >
              <div
                class="ticker tickerCenterAlign"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-red500"
                    data-icon="main-caret-up"
                  >
                    <svg
                      height="6"
                      viewBox="0 0 14 9"
                      width="6"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.7 7.2L7.9.4C7.7.2 7.4 0 7 0s-.7.2-.9.4L.3 7.2c-.2.2-.3.4-.3.7C0 8.5.5 9 1.2 9h11.7c.6 0 1.1-.5 1.1-1.1 0-.3-.1-.5-.3-.7z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="tickerValue tickerValueStyles tickerValueRed"
                  data-test="tickerValue"
                >
                  620.2%
                </div>
              </div>
            </div>
          </div>
          <div
            class="tickerContainer"
          >
            <div
              class="tickerContainer"
              data-test="ticker"
            >
              <div
                class="ticker tickerCenterAlign"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-red500"
                    data-icon="main-caret-up"
                  >
                    <svg
                      height="6"
                      viewBox="0 0 14 9"
                      width="6"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.7 7.2L7.9.4C7.7.2 7.4 0 7 0s-.7.2-.9.4L.3 7.2c-.2.2-.3.4-.3.7C0 8.5.5 9 1.2 9h11.7c.6 0 1.1-.5 1.1-1.1 0-.3-.1-.5-.3-.7z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="tickerValue tickerValueStyles tickerValueRed"
                  data-test="tickerValue"
                >
                  600.2%
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MostActiveServicesWidget should render MostActiveServicesWidget 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card card"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
      >
        Widget Title
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--intent-primary"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            all
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.prod
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.nonProd
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-large"
      >
        <div
          class="typeContainer typeSelected"
          data-test="mostActiveServicesWidgetTypeSelected"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-white"
          >
            deploymentsText
          </p>
        </div>
        <div
          class="typeContainer"
          data-test="mostActiveServicesWidgetType"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            errors
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main stackTickerContainer StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-flex-start"
        data-test="mostActiveServicesWidgetContent"
        style="height: 150px;"
      >
        <div
          class="weightedStackContainer"
        >
          <div
            class="StyledProps--font StyledProps--main WeightedStack--main"
          >
            <div>
              <div
                class="WeightedStack--stack stack"
              >
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 100%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label StyledProps--padding-left-small StyledProps--padding-right-small"
                      >
                        Service2
                         (
                        137
                        )
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="WeightedStack--stack stack"
              >
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 27.00729927007299%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label StyledProps--padding-left-small StyledProps--padding-right-small"
                      >
                        Service1
                         (
                        37
                        )
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tickerContainer"
          >
            <div
              class="tickerContainer"
              data-test="ticker"
            >
              <div
                class="ticker tickerCenterAlign"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-red500"
                    data-icon="main-caret-up"
                  >
                    <svg
                      height="6"
                      viewBox="0 0 14 9"
                      width="6"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.7 7.2L7.9.4C7.7.2 7.4 0 7 0s-.7.2-.9.4L.3 7.2c-.2.2-.3.4-.3.7C0 8.5.5 9 1.2 9h11.7c.6 0 1.1-.5 1.1-1.1 0-.3-.1-.5-.3-.7z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="tickerValue tickerValueStyles tickerValueRed"
                  data-test="tickerValue"
                >
                  435.4%
                </div>
              </div>
            </div>
          </div>
          <div
            class="tickerContainer"
          >
            <div
              class="tickerContainer"
              data-test="ticker"
            >
              <div
                class="ticker tickerCenterAlign"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-red500"
                    data-icon="main-caret-up"
                  >
                    <svg
                      height="6"
                      viewBox="0 0 14 9"
                      width="6"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.7 7.2L7.9.4C7.7.2 7.4 0 7 0s-.7.2-.9.4L.3 7.2c-.2.2-.3.4-.3.7C0 8.5.5 9 1.2 9h11.7c.6 0 1.1-.5 1.1-1.1 0-.3-.1-.5-.3-.7z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="tickerValue tickerValueStyles tickerValueRed"
                  data-test="tickerValue"
                >
                  45.4%
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
